--- a/IGoOut/AndroidManifest.xml
+++ b/IGoOut/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_launcher"
         android:name="IGoOutApp"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
+        android:theme="@style/AppBaseTheme" >
         <activity
             android:name="hr.android.petkovic.igoout.activity.SignInActivity"
             android:label="@string/sign_in" >
