--- a/IGoOut/project.properties
+++ b/IGoOut/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=..\\ForImport\\JakeWharton-ActionBarSherlock-4.4.0-0-g4a79d53\\JakeWharton-ActionBarSherlock-5a15d92\\actionbarsherlock
-android.library.reference.2=../ForImport/volley
+android.library.reference.1=../../../workspace_android/ForImport/JakeWharton-ActionBarSherlock-4.4.0-0-g4a79d53/JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
+android.library.reference.2=../../../workspace_android/ForImport/volley
