--- a/IGoOut/project.properties
+++ b/IGoOut/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
-android.library.reference.1=../../../workspace_android/ForImport/JakeWharton-ActionBarSherlock-4.4.0-0-g4a79d53/JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
-android.library.reference.2=../../../workspace_android/ForImport/volley
+target=android-17
+android.library.reference.1=../../tus-android/tus-common/libs/actionBarSherlock
+android.library.reference.2=../../tus-android/tus-common/libs/volley
